# Ikaros

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README_zh-CN.md  ROADMAP.md  deny.toml  flake.nix  install.ps1  install.sh
crates/ikaros-api/: Cargo.toml
crates/ikaros-api/src/: lib.rs
crates/ikaros-api/src/api/: health.rs  mod.rs  server.rs
crates/ikaros-body/: Cargo.toml
crates/ikaros-body/src/: adapter.rs  lib.rs  types.rs  web.rs
crates/ikaros-cli/: Cargo.toml
crates/ikaros-cli/src/: acp.rs  agent.rs  app.rs  approval.rs  body.rs  browser.rs  chat.rs  code.rs  config.rs  debug.rs  diagnostics.rs  fs.rs  git.rs  image.rs  main.rs  mcp.rs  memory.rs  message.rs  persona.rs  policy.rs  provider.rs  rag.rs  relationship.rs  repo.rs  runtime_context.rs  schedule.rs  self_modify.rs  service.rs  skill.rs  task.rs  testing.rs  vision.rs  voice.rs  web.rs
crates/ikaros-cli/src/api/: audit.rs  evidence.rs  http.rs  mod.rs  routing.rs  server.rs
crates/ikaros-cli/src/body/: dashboard.rs  server.rs  tests.rs
crates/ikaros-cli/src/chat/: attachments.rs  errors.rs  history.rs  interactive.rs  live.rs  mod.rs  notice.rs  output.rs  pending.rs  progress.rs  runtime.rs  screen.rs  slash.rs  startup.rs  terminal.rs  tests.rs  tui.rs  turn.rs  workbench.rs
crates/ikaros-cli/src/debug/: coding.rs  continuations.rs  dump.rs  insights.rs  logs.rs  memory.rs  mod.rs  provider.rs  readiness.rs  sandbox.rs  session.rs  state_db.rs  trace.rs
crates/ikaros-cli/src/gateway/: adapter.rs  commands.rs  daemon.rs  delivery.rs  mod.rs  pairing.rs  status.rs  webhook.rs  workbench.rs
crates/ikaros-cli/src/message/: adapter.rs  commands.rs  daemon.rs  delivery.rs  mod.rs  pairing.rs  status.rs  webhook.rs  workbench.rs
crates/ikaros-cli/tests/: cli_smoke.rs
crates/ikaros-cli/tests/cli_smoke/: config_validate.rs  harness_storage.rs  ingress_workers.rs  persona_voice_coding.rs  provider.rs  runtime_core.rs
crates/ikaros-cli/tests/support/: mod.rs
crates/ikaros-coding/: Cargo.toml
crates/ikaros-coding/src/: context.rs  diff.rs  iteration.rs  lib.rs  patch.rs  repo.rs  review.rs  runtime.rs  self_modify.rs  testing.rs  tests.rs  workflow.rs
crates/ikaros-coding/src/patch/: apply.rs  failure.rs  mod.rs  parse.rs  path.rs  report.rs  rollback.rs  stage.rs
crates/ikaros-coding/src/runtime/: check.rs  command.rs  report.rs  workspace.rs
crates/ikaros-coding/src/self_modify/: apply.rs  checks.rs  diff.rs  dry_run.rs  rollback.rs  store.rs  types.rs
crates/ikaros-coding/src/tests/: analysis.rs  context.rs  guarded_patch.rs  mod.rs  runtime.rs  self_modify.rs
crates/ikaros-context/: Cargo.toml
crates/ikaros-context/src/: budget.rs  compressor.rs  diff.rs  error.rs  lib.rs  priority.rs  prompt.rs  references.rs  registry.rs  tokenizer.rs  types.rs
crates/ikaros-core/: Cargo.toml
crates/ikaros-core/src/: agent.rs  config.rs  context.rs  error.rs  lib.rs  paths.rs  preset.rs  redaction.rs  secret.rs  task.rs  time.rs  trace.rs
crates/ikaros-core/src/config/: execution.rs  init.rs  kinds.rs  mcp.rs  memory.rs  model.rs  policy.rs  presets.rs  providers.rs  rag.rs  resolved.rs  self_modify.rs  store.rs  validation.rs  voice.rs
crates/ikaros-gateway/: Cargo.toml
crates/ikaros-gateway/src/: adapter.rs  lib.rs  protocol.rs  status.rs  store.rs  tests.rs  types.rs  webhook.rs  worker.rs
crates/ikaros-gateway/src/store/: jsonl.rs  state.rs
crates/ikaros-gateway/src/webhook/: acl.rs  http.rs  payload.rs  response.rs  server.rs  tests.rs
crates/ikaros-gateway/tests/: gateway_store.rs
crates/ikaros-harness/: Cargo.toml
crates/ikaros-harness/src/: approval.rs  audit.rs  execution_env.rs  guardrails.rs  lib.rs  network.rs  plugin.rs  policy.rs  session.rs  skill.rs  task_runner.rs  task_runner_tests.rs  tests.rs
crates/ikaros-harness/src/approval/: log.rs  queue.rs  redaction.rs  tests.rs  types.rs
crates/ikaros-harness/src/plugin/: catalog.rs  issue.rs  loader.rs  manifest.rs  marketplace.rs  tests.rs  validation.rs
crates/ikaros-harness/src/policy/: engine.rs  overlay.rs  (+4 more)
crates/ikaros-host/: Cargo.toml
crates/ikaros-host/src/: builder.rs  lib.rs  location.rs  network.rs  services.rs
crates/ikaros-mcp/: Cargo.toml
crates/ikaros-mcp/src/: lib.rs
crates/ikaros-memory/: Cargo.toml
crates/ikaros-memory/src/: candidate.rs  common.rs  journal.rs  jsonl.rs  lib.rs  local.rs  policy.rs  projection.rs  provider.rs  relationship.rs  sqlite.rs  tests.rs  types.rs  working.rs
crates/ikaros-memory/tests/: memory_store.rs
crates/ikaros-models/: Cargo.toml
crates/ikaros-models/src/: anthropic.rs  factory.rs  governance.rs  http.rs  lib.rs  mock.rs  ollama.rs  params.rs  registry.rs  tests.rs  transport.rs  types.rs  usage.rs
crates/ikaros-models/tests/: live_model.rs  provider_public.rs
crates/ikaros-protocol/: Cargo.toml
crates/ikaros-protocol/src/: envelope.rs  lib.rs  model.rs  trace.rs
crates/ikaros-runtime/: Cargo.toml
crates/ikaros-runtime/src/: body.rs  chat.rs  emotion.rs  environment.rs  gateway.rs  lib.rs  message.rs  model_http.rs  persona.rs  relationship.rs  session.rs  task.rs
crates/ikaros-runtime/tests/: chat_public.rs
crates/ikaros-sandbox/: Cargo.toml
crates/ikaros-sandbox/src/: debug.rs  docker.rs  envs.rs  filesystem.rs  lib.rs  network.rs  network_policy.rs  process.rs
crates/ikaros-session/: Cargo.toml
crates/ikaros-session/src/: lib.rs  sink.rs  sqlite.rs  store.rs  types.rs
crates/ikaros-session/tests/: sqlite_store.rs
crates/ikaros-skills/: Cargo.toml
crates/ikaros-skills/src/: coding.rs  fs.rs  lib.rs  mcp.rs  memory.rs  multimodal.rs  persona.rs  plugin.rs  prompt_docs.rs  rag.rs  shell.rs  support.rs  tests.rs  tool_bridge.rs  voice.rs
crates/ikaros-tui/: Cargo.toml
crates/ikaros-tui/src/: actions.rs  input.rs  layout.rs  lib.rs  markdown.rs  notice.rs  progress.rs  slash.rs  slash_popup.rs  streaming.rs  tests.rs  transcript.rs  workbench_input.rs
crates/ikaros-voice/: Cargo.toml
crates/ikaros-voice/src/: factory.rs  lib.rs  mock.rs  openai_compatible.rs  tests.rs  types.rs
(+433 files in other folders)
