[package]
name = "ikaros-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ikaros-core = { path = "../ikaros-core" }
ikaros-harness = { path = "../ikaros-harness" }
ikaros-host = { path = "../ikaros-host" }
ikaros-models = { path = "../ikaros-models" }
ikaros-runtime = { path = "../ikaros-runtime" }
ikaros-session = { path = "../ikaros-session" }
ikaros-skills = { path = "../ikaros-skills" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
