[package]
name = "ikaros-body"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ikaros-core = { path = "../ikaros-core" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
