[package]
name = "ikaros-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
