[package]
name = "ikaros-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
flate2.workspace = true
ikaros-core = { path = "../ikaros-core" }
ikaros-sandbox = { path = "../ikaros-sandbox" }
ikaros-tools = { path = "../ikaros-tools" }
libc.workspace = true
reqwest.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
