[package]
name = "ikaros-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ikaros-core = { path = "../ikaros-core" }
ikaros-harness = { path = "../ikaros-harness" }
ikaros-memory = { path = "../ikaros-memory" }
ikaros-rag = { path = "../ikaros-rag" }
ikaros-skills = { path = "../ikaros-skills" }
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
