[package]
name = "ikaros-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ikaros-core = { path = "../ikaros-core" }
ikaros-harness = { path = "../ikaros-harness" }
ikaros-toolkit = { path = "../ikaros-toolkit" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile.workspace = true

[lints]
workspace = true
