[package]
name = "ikaros-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
ikaros-core = { path = "../ikaros-core" }
ikaros-protocol = { path = "../ikaros-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
