[package]
name = "ikaros-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ikaros-automation = { path = "../ikaros-automation" }
ikaros-body = { path = "../ikaros-body" }
ikaros-context = { path = "../ikaros-context" }
ikaros-core = { path = "../ikaros-core" }
ikaros-gateway = { path = "../ikaros-gateway" }
ikaros-harness = { path = "../ikaros-harness" }
ikaros-memory = { path = "../ikaros-memory" }
ikaros-models = { path = "../ikaros-models" }
ikaros-rag = { path = "../ikaros-rag" }
ikaros-session = { path = "../ikaros-session" }
ikaros-skills = { path = "../ikaros-skills" }
ikaros-soul = { path = "../ikaros-soul" }
serde.workspace = true
serde_json.workspace = true
ring.workspace = true
rusqlite.workspace = true
tokio.workspace = true
time.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
ikaros-voice = { path = "../ikaros-voice" }
async-trait.workspace = true

[lints]
workspace = true
