[package]
name = "ikaros-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ikaros-core = { path = "../ikaros-core" }
ikaros-protocol = { path = "../ikaros-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
