[package]
name = "ikaros-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
ikaros-coding = { path = "../ikaros-coding" }
ikaros-core = { path = "../ikaros-core" }
ikaros-harness = { path = "../ikaros-harness" }
ikaros-mcp = { path = "../ikaros-mcp" }
ikaros-memory = { path = "../ikaros-memory" }
ikaros-models = { path = "../ikaros-models" }
ikaros-rag = { path = "../ikaros-rag" }
ikaros-session = { path = "../ikaros-session" }
ikaros-soul = { path = "../ikaros-soul" }
ikaros-tools = { path = "../ikaros-tools" }
ikaros-voice = { path = "../ikaros-voice" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
