[package]
name = "ikaros-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ikaros-core = { path = "../ikaros-core" }
ratatui.workspace = true
serde_json.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
